--- a/new ysnzp/scss/style.scss
+++ b/new ysnzp/scss/style.scss
@@ -1,7 +1,9 @@
 /* variable*/
 $color-background: #181818;
 $color-icon:#4a4a4a;
-$min-height:768px;
+$color-point:#5a7fb3;
+$min-height:800px;
+
 
 /* reset */
 html, body, div, span, applet, object, iframe,
@@ -75,7 +77,7 @@ body {
     // background: pink;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700&display=swap&subset=korean');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700,900&display=swap&subset=korean');
 
 .a11y{
     opacity: 0;
@@ -87,6 +89,40 @@ body {
 .wrapper{
     min-width: 100%;
     font-size:0;
+}
+.button-a{
+    padding:18px 40px;
+    background: #181818;
+    color:white;
+    text-align: center;
+    font-weight: 700;
+    border: none;
+    outline: none;
+    font-size:21px;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    &::before{
+        // content: '';
+        // position: absolute;
+        // background: #5a7fb3;
+        // transform: rotate(-45deg);
+        // width: 300%;
+        // height:50px;
+    }
+}
+.button-b{
+    border:none;
+    outline: none;
+    border-top:3px solid white;
+    border-bottom:3px solid white;
+    padding:12px 24px;
+    background: transparent;
+    color:white;
+    font-weight: 700;
+    font-size:21px;
+    text-transform: uppercase;
+    cursor: pointer;
 }
 /* header - gnb, navigation */
 header{
@@ -227,10 +263,375 @@ main{
     width:calc(100% - 80px);
     overflow: hidden;
     .container{
-        background: paleturquoise;
         font-size:16px;
-        width: 100%;
+        min-width: 1024px;
         height:100%;
-        overflow-x:auto; 
+        transition: all 0.2s;
+        font-size:0;
+        /* main page*/
+        >div{
+            display: inline-block;
+            height:100%;
+        }
+        .hero{
+            min-width:1200px;
+            max-width: 1600px;
+            width: 80%;
+            height:100%;
+            padding:80px;
+            h2{
+                font-size:140px;
+                line-height: 140px;
+                font-weight: 900;
+                text-transform: uppercase;
+                margin-top:20px;
+            }
+            .caption{
+                font-size:24px;
+                letter-spacing: 4px;
+                margin-top:40px;
+                line-height: normal;
+                font-weight: 400;
+            }
+            .button{
+                margin-top:72px;
+            }
+            .scroll-action{
+                position: absolute;
+                right:0;
+                bottom:80px;
+                p{
+                    font-size:24px;
+                    letter-spacing: 4px;
+                    text-transform: uppercase;
+                    display: inline-block;
+                }
+                .bar{
+                    width:48px;
+                    height:3px;
+                    margin-left: 32px;
+                    display: inline-block;
+                    margin-top:12px;
+                    &::before{
+                        content: '';
+                        position: absolute;
+                        height:100%;
+                        top:0;
+                        left:0;
+                        background: black;
+                        animation-name: scrollMe;
+                        animation-duration: 1.2s;
+                        animation-iteration-count: infinite;
+                    }
+                }
+            }
+        }
+        .portfolio-list{
+            margin-left:80px;
+            font-size: 0;
+            min-height: $min-height;
+            .portfolio{
+                width:600px;
+                height:100%;
+                padding:80px 50px;
+                overflow: hidden;
+                display: inline-block;
+                .port-num{
+                    text-transform: uppercase;
+                    color:white;
+                    font-size:21px;
+                    font-weight: 700;
+                    margin-top:60px;
+                    margin-left: 30px;
+                    &::after{
+                        content: '';
+                        position: absolute;
+                        background: $color-point;
+                        width:64px;
+                        height:14px;
+                        left:-30px;
+                        bottom:-5px;
+                        z-index: -1;
+                    }
+                }
+                .port-name{
+                    font-size: 80px;
+                    line-height: 80px;
+                    color:white;
+                    margin-top:40px;
+                    font-weight: 900;
+                }
+                .button{
+                    position: absolute;
+                    width:300px;
+                    bottom:80px;
+                    left: 0;
+                    right:0;
+                    margin: auto;
+                }
+                .port-bg{
+                    position: absolute;
+                    top:0;
+                    left:0;
+                    z-index: -3;
+                    transition: all 0.7s;
+                    height: 100%;
+                }
+                &::before{
+                    content: '';
+                    position: absolute;
+                    width:100%;
+                    height:100%;
+                    background: rgba(0,0,0,0.45);
+                    top:0;
+                    left: 0;
+                    // z-index: -2;
+                }
+                &:hover .port-bg{
+                    transform: scale(1.03);
+                }
+            }
+            .port-03{
+                .port-bg{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+        .service-list{
+            margin-left: 200px;
+            .service{
+                display: inline-block;
+                padding:80px 0;
+                margin-right:240px;
+                height: 100%;
+                .image{
+                    overflow: hidden;
+                    img{
+                        width: 100%;
+                        height:100%;
+                        object-fit: cover;
+                    }
+                    &::before{
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height:100%;
+                        top:0;
+                        left: 0;
+                        background: rgba(0,0,0,0.2);
+                        z-index: 1;
+                    }
+                }
+                .text-box{
+                    .caption{
+                        font-size:21px;
+                        font-weight: 500;
+                    }
+                    .service-title{
+                        margin-top:12px;
+                        font-size: 60px;
+                        font-weight: 700;
+                    }
+                    .service-text{
+                        margin-top:24px;
+                        font-size:18px;
+                        line-height: 32px;
+                    }
+                }
+            }
+            .service-1{
+                .image{
+                    margin-top:80px;
+                    width:600px;
+                    height:450px;
+                }
+                .text-box{
+                    margin-top:60px;
+                    margin-left: 50px;
+                }
+            }
+            .service-2{
+                .image{
+                    margin-top:130px;
+                    margin-left:70px;
+                    width:400px;
+                    height:300px;
+                }
+                .text-box{
+                    margin-top:130px;
+                }
+            }
+            .service-3{
+                .image{
+                    margin-top:80px;
+                    width:600px;
+                    height:450px;
+                }
+                .text-box{
+                    margin-top:60px;
+                    margin-left: 50px;
+                }
+            }
+        }
+        .process-list{
+            width:500px;
+            height:100%;
+            .process{
+                width:100%;
+                height:50%;
+                padding:60px 50px;
+                text-align: center;
+                overflow: hidden;
+                min-height: 400px;
+                .proc-title{
+                    font-size: 48px;
+                    color:white;
+                    font-weight: 700;
+                    line-height: 60px;
+                }
+                .proc-caption{
+                    margin-top:24px;
+                    font-size:18px;
+                    color:white;
+                    line-height: 32px;
+                    white-space: normal;
+                    font-weight: 400;
+                }
+                .proc-bg{
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    z-index: -2;
+                    top:0;
+                    left: 0;
+                }
+                .button{
+                    position: absolute;
+                    bottom:50px;
+                    left:0;
+                    right:0;
+                    width:300px;
+                    margin: auto;
+
+                }
+                .button:hover.proc-bg{
+                    transform: scale(1.3);
+                }
+                &::before{
+                    content: '';
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    top:0;
+                    left: 0;
+                    background: rgba(0,0,0,0.5);
+                    z-index: -1;
+                }
+            }
+        }
+        .footer-wrap{
+            width:510px;
+            height: 100%;
+            .footer{
+                width:100%;
+                height: calc(100% - 150px);
+                background: #181818;
+                padding:80px;
+                text-align: right;
+                min-height: 780px;
+                .foot-title{
+                    font-size:60px;
+                    font-weight: 700;
+                    color:white;
+                    line-height: 1.2;
+                    margin-top:60px;
+                }
+                .foot-text{
+                    font-size:16px;
+                    line-height: 24px;
+                    color:white;
+                    margin-top:24px;
+                    white-space: normal;
+                    font-weight: 400;
+                }
+                .button{
+                    margin-top:56px;
+                    width: 250px;
+                }
+                .foot-info-box{
+                    position: absolute;
+                    width: calc(100% - 160px);
+                    bottom:80px;
+                    right:80px;
+                    .foot-info{
+                        font-size:16px;
+                        color:rgba(255,255,255,0.87);
+                        margin-bottom: 12px;
+                        .bar{
+                            display: inline-block;
+                            width:1px;
+                            height:12px;
+                            background: white;
+                            margin:4px 12px;
+                        }
+                    }
+                }
+            }
+            .turn-back{
+                width:100%;
+                height:150px;
+                background: white;
+                padding:60px;
+                text-align: right;
+                .bar{
+                    width: 48px;
+                    height: 3px;
+                    margin-right: 32px;
+                    display: inline-block;
+                    margin-top: 12px;
+                    &::before{
+                        content: '';
+                        position: absolute;
+                        height:100%;
+                        top:0;
+                        right:0;
+                        background: black;
+                        animation-name: turnBack;
+                        animation-duration: 1.8s;
+                        animation-iteration-count: infinite;
+                    }
+                }
+                p{
+                    font-size: 24px;
+                    letter-spacing: 4px;
+                    text-transform: uppercase;
+                    display: inline-block;
+                    font-weight: 400;
+                }
+            }
+        }
     }
+}
+
+
+
+@keyframes scrollMe{
+    0%{
+        width:0;
+    }
+    100%{
+        width:48px;
+    }
+}
+
+@keyframes turnBack{
+    0%{
+        width:0;
+    }
+    100%{
+        width:48px;
+    } 
 }
