--- a/new ysnzp/css/style.css
+++ b/new ysnzp/css/style.css
@@ -1,19 +1,87 @@
 /* variable*/
 /* reset */
 @import url("https://fonts.googleapis.com/css?family=Noto+Sans+KR:400,500,700,900&display=swap&subset=korean");
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -27,21 +95,34 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after,
-q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: '';
   content: none;
 }
@@ -91,7 +172,6 @@ body {
 
 .button-a {
   padding: 18px 40px;
-  background: #181818;
   color: white;
   text-align: center;
   font-weight: 700;
@@ -101,6 +181,38 @@ body {
   cursor: pointer;
   overflow: hidden;
   position: relative;
+  z-index: 0;
+}
+
+.button-a::after {
+  content: '';
+  position: absolute;
+  z-index: 0;
+  width: 100%;
+  height: 100%;
+  background: #181818;
+  top: 0;
+  left: 0;
+  z-index: -2;
+}
+
+.button-a::before {
+  content: '';
+  position: absolute;
+  background: #5a7fb3;
+  -webkit-transform: translateX(-70%) translateY(-20%) rotate(40deg);
+          transform: translateX(-70%) translateY(-20%) rotate(40deg);
+  width: 400%;
+  height: 400%;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  z-index: -1;
+}
+
+.button-a:hover::before {
+  -webkit-transform: translateX(-43%) translateY(-20%) rotate(40deg);
+          transform: translateX(-43%) translateY(-20%) rotate(40deg);
+  background: #3a557d;
 }
 
 .button-b {
@@ -223,7 +335,7 @@ header .gnb-active {
 
 header .navigation {
   display: inline-block;
-  background: #181818;
+  background-color: #181818;
   height: 100%;
   padding: 80px 0;
   white-space: nowrap;
@@ -269,6 +381,12 @@ header .navigation .sub-list li:last-child {
   margin-bottom: 0;
 }
 
+header .navigation .navi-bg {
+  position: absolute;
+  opacity: 0.07;
+  margin-left: 25%;
+}
+
 header .navi-on {
   width: 450px;
   margin-left: 0px;
@@ -299,7 +417,7 @@ main .container > div {
 }
 
 main .container .hero {
-  min-width: 1200px;
+  min-width: 1080px;
   max-width: 1600px;
   width: 80%;
   height: 100%;
@@ -431,6 +549,7 @@ main .container .portfolio-list .portfolio::before {
   background: rgba(0, 0, 0, 0.45);
   top: 0;
   left: 0;
+  z-index: -1;
 }
 
 main .container .portfolio-list .portfolio:hover .port-bg {
